# CrewAI_RPG_game

a3/: README.md  design.docx  pyproject.toml  report.md
a3/a4/: index.html  report_with_git link.docx  scene_logic.md
a3/a4/.history/: drawer_20250303124305.js  index_20250303023220.html  index_20250303023433.html  index_20250303123108.html  index_20250303130815.html  index_20250303131821.html  index_20250303132011.html  index_20250303132703.html  index_20250303132746.html  index_20250303145540.html  index_20250303145556.html  index_20250303190355.html  player_20250303122152.js
a3/a4/data/: background.txt  dialogCtrl.txt  enemy.txt  html.txt  logic.txt  player.txt  system.txt  ui.txt
a3/a4/images/: weapons_magic_output.txt
a3/a4/js/: background.js  dialogCtrl.js  dialogData.js  drawer.js  enemy.js  logic.js  player.js
a3/game_data/: DialogControl.js  background.js  background_update.js  characters.md  dialogues.js  environments.js  environments_update.js  scene_prompts.md  story.md  test_report.md
a3/old/: scene_logic.md
a3/old/images/: weapons_magic_output.txt
a3/old/js/: enemy.js  logic.js  player.js
a3/resource/: report.docx
a3/resource/.history/: index_20250303022406.html  index_20250303023114.html  index_20250303123120.html  index_20250303123210.html  index_20250303124359.html  index_20250303124659.html  index_20250303124901.html  index_20250303125809.html  index_20250303130641.html  index_20250303184455.html  index_20250303185306.html  index_20250303191010.html
a3/resource/js/: background.js  dialogCtrl.js  dialogData.js  drawer.js  enemy.js  (+2 more)
(+121 files in other folders)
