[project]
name = "a3"
version = "0.1.0"
description = "A3 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
a3 = "a3.main:run"
run_crew = "a3.main:run"
train = "a3.main:train"
replay = "a3.main:replay"
test = "a3.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
